footer logo was not aligning correct

--- a/css/footer.css
+++ b/css/footer.css
@@ -195,6 +195,18 @@ input[type=checkbox]#copyrightToggle:checked ~ .copyright--moneys {
     padding: 1em 0.5em;
 }
 
+.footer-logo--container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-logo--container img {
+    width: 100%;
+    height: 100%;
+    flex: 1;
+}
+
 
 @media(min-width: 1024px){
     /* start of footer-row -- subscribe */
